test/functions/bradc/intents/intents-strings.error3.good
intents-strings.chpl:34: In function 'goo':
intents-strings.chpl:37: error: illegal lvalue in assignment
